# LRR

./: CMakeLists.txt  README.md
cdcl/: CMakeLists.txt  cdcl_estimation.h  cdcl_estimation.txx  cdcl_estimation_ICP.h  cdcl_estimation_ICP.txx  cdcl_estimation_ICP_matching_all.h  cdcl_estimation_ICP_matching_all.txx  cdcl_estimation_abs.h  cdcl_estimation_symmetric.h  cdcl_estimation_symmetric.txx  cdcl_estimation_symmetric_ICP_matching_all.h  cdcl_estimation_symmetric_ICP_matching_all.txx  cdcl_estimation_transfer.h  cdcl_estimation_transfer.txx  cdcl_feature.h  cdcl_feature_ICP.h  cdcl_feature_with_shape.h  cdcl_keypoint.h  cdcl_lbfgs.h  cdcl_macros.h  cdcl_match.h  cdcl_obj_fun_cov.h  cdcl_obj_fun_cov.txx  cdcl_obj_fun_cov_transfer.h  cdcl_obj_fun_cov_transfer.txx  cdcl_obj_fun_par.h  cdcl_obj_fun_par.txx  cdcl_obj_fun_par_sym.h  cdcl_obj_fun_par_sym.txx  cdcl_obj_fun_par_transfer.h  cdcl_obj_fun_par_transfer.txx  cdcl_trans.h  cdcl_trans.txx  cdcl_trans_affine.h  cdcl_trans_affine.txx  cdcl_trans_rigid3d.cxx  cdcl_trans_rigid3d.h  cdcl_trans_similarity2d.cxx  cdcl_trans_similarity2d.h  cdcl_utils.h  (+5 more)
cdcl/Templates/: cdcl_estimation+2.4-.cxx  cdcl_estimation+2.6-.cxx  cdcl_estimation+3.12-.cxx  cdcl_estimation+3.6-.cxx  cdcl_estimation_ICP+2.4-.cxx  cdcl_estimation_ICP+2.6-.cxx  cdcl_estimation_ICP+3.12-.cxx  cdcl_estimation_ICP+3.6-.cxx  cdcl_estimation_ICP_matching_all+3.12-.cxx  cdcl_estimation_ICP_matching_all+3.6-.cxx  cdcl_estimation_symmetric+2.4.cdcl_estimation-.cxx  cdcl_estimation_symmetric+2.4.cdcl_estimation_transfer-.cxx  cdcl_estimation_symmetric+2.6.cdcl_estimation-.cxx  cdcl_estimation_symmetric+2.6.cdcl_estimation_transfer-.cxx  cdcl_estimation_symmetric+3.12.cdcl_estimation-.cxx  cdcl_estimation_symmetric+3.12.cdcl_estimation_transfer-.cxx  cdcl_estimation_symmetric+3.6.cdcl_estimation-.cxx  cdcl_estimation_symmetric+3.6.cdcl_estimation_transfer-.cxx  cdcl_estimation_symmetric_ICP_matching_all+3.12-.cxx  cdcl_estimation_symmetric_ICP_matching_all+3.6-.cxx  cdcl_estimation_transfer+2.4-.cxx  cdcl_estimation_transfer+2.6-.cxx  cdcl_estimation_transfer+3.12-.cxx  cdcl_estimation_transfer+3.6-.cxx  cdcl_obj_fun_cov+2.4-.cxx  cdcl_obj_fun_cov+2.6-.cxx  cdcl_obj_fun_cov+3.12-.cxx  cdcl_obj_fun_cov+3.6-.cxx  cdcl_obj_fun_cov_transfer+2.4-.cxx  cdcl_obj_fun_cov_transfer+2.6-.cxx  cdcl_obj_fun_cov_transfer+3.12-.cxx  cdcl_obj_fun_cov_transfer+3.6-.cxx  cdcl_obj_fun_par+2.4-.cxx  cdcl_obj_fun_par+2.6-.cxx  cdcl_obj_fun_par+3.12-.cxx  cdcl_obj_fun_par+3.6-.cxx  cdcl_obj_fun_par_sym+2.4.cdcl_obj_fun_par-.cxx  cdcl_obj_fun_par_sym+2.4.cdcl_obj_fun_par_transfer-.cxx  cdcl_obj_fun_par_sym+2.6.cdcl_obj_fun_par-.cxx  cdcl_obj_fun_par_sym+2.6.cdcl_obj_fun_par_transfer-.cxx  (+75 more)
cdcl/TemplatesVTK/: cdcl_utils_VTK+2.4-.cxx  cdcl_utils_VTK+2.6-.cxx  cdcl_utils_VTK+3.12-.cxx  cdcl_utils_VTK+3.6-.cxx  cdcl_utils_VTKIO+2-.cxx
cdcl/display/: CMakeLists.txt  cdcl_display.h  cdcl_display.txx
cdcl/display/Templates/: cdcl_display+2.4-.cxx  cdcl_display+2.6-.cxx  cdcl_display+3.12-.cxx  cdcl_display+3.6-.cxx
cdcl/displayVTK/: CMakeLists.txt  cdcl_extract_data.h  cdcl_extract_data.txx  itkImageToVTKImageFilter.h  itkVTKImageToImageFilter.h  itkVTKImageToImageFilter.txx  vtkTensorGlyphScaled.cxx  vtkTensorGlyphScaled.h
cdcl/displayVTK/Templates/: cdcl_extract_data+3.12.cdcl_feature_ICP+3--.cxx  cdcl_extract_data+3.12.cdcl_feature_with_shape+3--.cxx  cdcl_extract_data+3.6.cdcl_feature_ICP+3--.cxx  cdcl_extract_data+3.6.cdcl_feature_with_shape+3--.cxx
cdcl/examples/: CMakeLists.txt  estimate.cxx
cdcl/io/: CMakeLists.txt  itkImageSlicesWithGeometryFilter.h  itkImageSlicesWithGeometryFilter.txx  vtkPolyDataToFeaturesICPFilter.cxx  vtkPolyDataToFeaturesICPFilter.h  vtkPolyDataToFeaturesWithShapeFilter.cxx  vtkPolyDataToFeaturesWithShapeFilter.h
features/: CMakeLists.txt  ComputeDescriptors.cxx  Copy of itkDescriptorMeshFilter.txx  CropDicom.cxx  ExtractFeatures.cxx  ExtractKeypoints.cxx  ExtractSlice.cxx  WatershedSegmentation1.cxx  itkDescriptorMeshFilter.h  itkDescriptorMeshFilter.txx  itkFeatureImageFilter.h  itkFeatureImageFilter.txx  itkFeatureImageFilter.txx-newfunctions  itkKdTreeForThreading.h  itkKdTreeForThreading.txx  itkKdTreeForThreadingGenerator.h  itkKdTreeForThreadingGenerator.txx  itkMeshSpatialFilterClean.h  itkMeshSpatialFilterClean.txx  itkVTKPolyDataToMeshFilter.h  itkVTKPolyDataToMeshFilter.txx  vtkITKDescriptorPointSetToPolyDataFilter.cxx  vtkITKDescriptorPointSetToPolyDataFilter.h  vtkITKPointSetToPolyDataFilter.cxx  vtkITKPointSetToPolyDataFilter.h
libsvm/: CMakeLists.txt  svm-predict.cpp  svm-scale.cpp  svm-train.cpp  svm_interface.cpp  svm_interface.h  version.txt
rrl/: CMakeLists.txt  itkLocationRegistration.cxx  itkLocationRegistration.h  rrl_estimation_ICP_matching_all.h  rrl_estimation_ICP_matching_all.txx  rrl_estimation_symmetric_ICP_matching_all.h  rrl_estimation_symmetric_ICP_matching_all.txx
rrl/Templates/: vnl_matrix_fixed+float.6.6-.cxx  vnl_vector_fixed+float.6-.cxx
rrl/Templates_itk/: rrl_estimation_ICP_matching_all+3.12-.cxx  rrl_estimation_ICP_matching_all+3.6-.cxx  rrl_estimation_symmetric_ICP_matching_all+3.12-.cxx  rrl_estimation_symmetric_ICP_matching_all+3.6-.cxx  vbl_smart_ptr+rrl_estimation_ICP_matching_all+3.12-.cxx  vbl_smart_ptr+rrl_estimation_ICP_matching_all+3.6-.cxx  vbl_smart_ptr+rrl_estimation_symmetric_ICP_matching_all+3.12-.cxx  vbl_smart_ptr+rrl_estimation_symmetric_ICP_matching_all+3.6-.cxx
rrl/examples/: CMakeLists.txt  MultiResImageRegistration2.cxx  NoduleRegistration2.cxx  compare_descriptors.cxx  compute_distance_map.cxx  feature_repeatability.cxx  indexing_one_descriptor.cxx  indexing_shape_context3dITK.cxx  location_registration.cxx
